Fix tree scrollbar (#6958)

--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
@@ -125,6 +125,7 @@
     font-size: 0.85em;
     outline: none;
     overflow-y: auto;
+    padding-bottom: 1px;
 }
 
 .tree:focus {
